publish: fixed spacing issue with contact links once viewport is 423px wide.
generated from commit c31d6addc51cab1964f132a87d88527d982f6767

--- a/css/app.css
+++ b/css/app.css
@@ -6746,12 +6746,12 @@ img {
     font-size: 14px; }
 
   .myLinkedIn {
-    top: 65px; }
+    top: 68px; }
 
   .myTwitter {
-    top: 35px; }
+    top: 38px; }
 
   .myGitHub {
-    top: 5px; } }
+    top: 8px; } }
 
 /*# sourceMappingURL=app.css.map */
